--- a/Day_001_HW.ipynb
+++ b/Day_001_HW.ipynb
@@ -14,7 +14,7 @@
    "outputs": [],
    "source": [
     "def mean_sqr_error(y, y_pred):\n",
-    "    mse = sum(pow(abs(y-y_pred),2))\n",
+    "    mse = sum(pow(abs(y-y_pred),2))/len(y)\n",
     "    return mse"
    ]
   },
