--- a/Day_001_HW.ipynb
+++ b/Day_001_HW.ipynb
@@ -41,6 +41,9 @@
    "outputs": [],
    "source": [
     "'''\n",
+    "選擇的資料集為-House Prices: Advanced Regression Techniques\n",
+    "https://www.kaggle.com/c/house-prices-advanced-regression-techniques/overview/description\n",
+    "\n",
     "1. 這組資料為何重要:\n",
     "商業問題-依照買家想要的房屋規格, 預測房價\n",
     "\n",
@@ -50,7 +53,6 @@
     "\n",
     "3. 資料型態為何:\n",
     "結構化資料(數值、表格)\n",
-    "\n",
     "\n",
     "4. 資料想解決的問題如何評估:\n",
     "該規格房型的房價: Root-Mean-Squared-Error (RMSE)\n",
