--- a/Day_006_HW.ipynb
+++ b/Day_006_HW.ipynb
@@ -143,9 +143,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "shape:  (307511, 7)\n",
+      "--------------------------------------------------------------------------------\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -227,164 +235,51 @@
        "      <td>0</td>\n",
        "      <td>0</td>\n",
        "    </tr>\n",
-       "    <tr>\n",
-       "      <th>...</th>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "      <td>...</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>307506</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>307507</th>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>307508</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>307509</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>307510</th>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>1</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>307511 rows × 7 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "        WEEKDAY_APPR_PROCESS_START_FRIDAY  WEEKDAY_APPR_PROCESS_START_MONDAY  \\\n",
-       "0                                       0                                  0   \n",
-       "1                                       0                                  1   \n",
-       "2                                       0                                  1   \n",
-       "3                                       0                                  0   \n",
-       "4                                       0                                  0   \n",
-       "...                                   ...                                ...   \n",
-       "307506                                  0                                  0   \n",
-       "307507                                  0                                  1   \n",
-       "307508                                  0                                  0   \n",
-       "307509                                  0                                  0   \n",
-       "307510                                  0                                  0   \n",
+       "   WEEKDAY_APPR_PROCESS_START_FRIDAY  WEEKDAY_APPR_PROCESS_START_MONDAY  \\\n",
+       "0                                  0                                  0   \n",
+       "1                                  0                                  1   \n",
+       "2                                  0                                  1   \n",
+       "3                                  0                                  0   \n",
+       "4                                  0                                  0   \n",
        "\n",
-       "        WEEKDAY_APPR_PROCESS_START_SATURDAY  \\\n",
-       "0                                         0   \n",
-       "1                                         0   \n",
-       "2                                         0   \n",
-       "3                                         0   \n",
-       "4                                         0   \n",
-       "...                                     ...   \n",
-       "307506                                    0   \n",
-       "307507                                    0   \n",
-       "307508                                    0   \n",
-       "307509                                    0   \n",
-       "307510                                    0   \n",
+       "   WEEKDAY_APPR_PROCESS_START_SATURDAY  WEEKDAY_APPR_PROCESS_START_SUNDAY  \\\n",
+       "0                                    0                                  0   \n",
+       "1                                    0                                  0   \n",
+       "2                                    0                                  0   \n",
+       "3                                    0                                  0   \n",
+       "4                                    0                                  0   \n",
        "\n",
-       "        WEEKDAY_APPR_PROCESS_START_SUNDAY  \\\n",
-       "0                                       0   \n",
-       "1                                       0   \n",
-       "2                                       0   \n",
-       "3                                       0   \n",
-       "4                                       0   \n",
-       "...                                   ...   \n",
-       "307506                                  0   \n",
-       "307507                                  0   \n",
-       "307508                                  0   \n",
-       "307509                                  0   \n",
-       "307510                                  0   \n",
+       "   WEEKDAY_APPR_PROCESS_START_THURSDAY  WEEKDAY_APPR_PROCESS_START_TUESDAY  \\\n",
+       "0                                    0                                   0   \n",
+       "1                                    0                                   0   \n",
+       "2                                    0                                   0   \n",
+       "3                                    0                                   0   \n",
+       "4                                    1                                   0   \n",
        "\n",
-       "        WEEKDAY_APPR_PROCESS_START_THURSDAY  \\\n",
-       "0                                         0   \n",
-       "1                                         0   \n",
-       "2                                         0   \n",
-       "3                                         0   \n",
-       "4                                         1   \n",
-       "...                                     ...   \n",
-       "307506                                    1   \n",
-       "307507                                    0   \n",
-       "307508                                    1   \n",
-       "307509                                    0   \n",
-       "307510                                    1   \n",
-       "\n",
-       "        WEEKDAY_APPR_PROCESS_START_TUESDAY  \\\n",
-       "0                                        0   \n",
-       "1                                        0   \n",
-       "2                                        0   \n",
-       "3                                        0   \n",
-       "4                                        0   \n",
-       "...                                    ...   \n",
-       "307506                                   0   \n",
-       "307507                                   0   \n",
-       "307508                                   0   \n",
-       "307509                                   0   \n",
-       "307510                                   0   \n",
-       "\n",
-       "        WEEKDAY_APPR_PROCESS_START_WEDNESDAY  \n",
-       "0                                          1  \n",
-       "1                                          0  \n",
-       "2                                          0  \n",
-       "3                                          1  \n",
-       "4                                          0  \n",
-       "...                                      ...  \n",
-       "307506                                     0  \n",
-       "307507                                     0  \n",
-       "307508                                     0  \n",
-       "307509                                     1  \n",
-       "307510                                     0  \n",
-       "\n",
-       "[307511 rows x 7 columns]"
+       "   WEEKDAY_APPR_PROCESS_START_WEDNESDAY  \n",
+       "0                                     1  \n",
+       "1                                     0  \n",
+       "2                                     0  \n",
+       "3                                     1  \n",
+       "4                                     0  "
       ]
      },
-     "execution_count": 10,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "\"\"\"\n",
-    "Your Code Here\n",
-    "\"\"\"\n",
     "sub_train = pd.get_dummies(sub_train)\n",
-    "sub_train"
+    "print('shape: ',sub_train.shape)\n",
+    "print('-'*80)\n",
+    "\n",
+    "sub_train.head()"
    ]
   },
   {
