--- a/Day_011_HW.ipynb
+++ b/Day_011_HW.ipynb
@@ -302,7 +302,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {
     "scrolled": true
    },
@@ -336,27 +336,27 @@
        "    <tr>\n",
        "      <th>0</th>\n",
        "      <td>0</td>\n",
-       "      <td>0</td>\n",
+       "      <td>1615.50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>1</td>\n",
-       "      <td>1</td>\n",
+       "      <td>6182.91</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>2</td>\n",
-       "      <td>2</td>\n",
+       "      <td>6750.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>3</td>\n",
-       "      <td>3</td>\n",
+       "      <td>7875.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>4</td>\n",
-       "      <td>4</td>\n",
+       "      <td>8703.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -366,27 +366,27 @@
        "    <tr>\n",
        "      <th>96</th>\n",
        "      <td>96</td>\n",
-       "      <td>96</td>\n",
+       "      <td>55624.50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>97</th>\n",
        "      <td>97</td>\n",
-       "      <td>97</td>\n",
+       "      <td>58482.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>98</th>\n",
        "      <td>98</td>\n",
-       "      <td>98</td>\n",
+       "      <td>62964.00</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>99</th>\n",
        "      <td>99</td>\n",
-       "      <td>99</td>\n",
+       "      <td>70006.50</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>100</th>\n",
        "      <td>100</td>\n",
-       "      <td>100</td>\n",
+       "      <td>258025.50</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -394,23 +394,23 @@
        "</div>"
       ],
       "text/plain": [
-       "       q  value\n",
-       "0      0      0\n",
-       "1      1      1\n",
-       "2      2      2\n",
-       "3      3      3\n",
-       "4      4      4\n",
-       "..   ...    ...\n",
-       "96    96     96\n",
-       "97    97     97\n",
-       "98    98     98\n",
-       "99    99     99\n",
-       "100  100    100\n",
+       "       q      value\n",
+       "0      0    1615.50\n",
+       "1      1    6182.91\n",
+       "2      2    6750.00\n",
+       "3      3    7875.00\n",
+       "4      4    8703.00\n",
+       "..   ...        ...\n",
+       "96    96   55624.50\n",
+       "97    97   58482.00\n",
+       "98    98   62964.00\n",
+       "99    99   70006.50\n",
+       "100  100  258025.50\n",
        "\n",
        "[101 rows x 2 columns]"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -420,7 +420,7 @@
     "YOUR CODE HERE\n",
     "\"\"\"\n",
     "# 1: 計算 AMT_ANNUITY 的 q0 - q100\n",
-    "q_all = [x for x in range (101)]\n",
+    "q_all = [np.percentile(app_train[~app_train['AMT_ANNUITY'].isnull()]['AMT_ANNUITY'], q=i) for i in range (0, 101)]\n",
     "\n",
     "pd.DataFrame({'q': list(range(101)),\n",
     "              'value': q_all})"
@@ -428,7 +428,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -454,26 +454,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 18,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "1615.5"
-      ]
-     },
-     "execution_count": 18,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "app_train['AMT_ANNUITY'].min()"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -483,7 +463,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -517,7 +497,7 @@
        "Name: AMT_ANNUITY_NORMALIZED, dtype: float64"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -544,22 +524,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "ModeResult(mode=array([450000.]), count=array([26022]))\n"
-     ]
-    }
-   ],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
