--- a/Day_011_HW.ipynb
+++ b/Day_011_HW.ipynb
@@ -303,9 +303,7 @@
   {
    "cell_type": "code",
    "execution_count": 3,
-   "metadata": {
-    "scrolled": true
-   },
+   "metadata": {},
    "outputs": [
     {
      "data": {
@@ -486,14 +484,14 @@
     {
      "data": {
       "text/plain": [
-       "count    3.075110e+05\n",
-       "mean     1.012601e+00\n",
-       "std      3.588691e-12\n",
-       "min      1.012601e+00\n",
-       "25%      1.012601e+00\n",
-       "50%      1.012601e+00\n",
-       "75%      1.012601e+00\n",
-       "max      1.012601e+00\n",
+       "count    307511.000000\n",
+       "mean         -0.801154\n",
+       "std           0.113049\n",
+       "min          -1.000000\n",
+       "25%          -0.883714\n",
+       "50%          -0.818357\n",
+       "75%          -0.742752\n",
+       "max           1.000000\n",
        "Name: AMT_ANNUITY_NORMALIZED, dtype: float64"
       ]
      },
@@ -513,7 +511,7 @@
     "    \"\"\"\n",
     "    max_x = x.max()\n",
     "    min_x = x.min()\n",
-    "    x = 2*((max_x/(max_x-min_x))-0.5)    \n",
+    "    x = 2*(((x-min_x)/(max_x-min_x))-0.5)    \n",
     "    return x\n",
     "\n",
     "app_train['AMT_ANNUITY_NORMALIZED'] = normalize_value(app_train['AMT_ANNUITY'])\n",
