--- a/Day_022_HW.ipynb
+++ b/Day_022_HW.ipynb
@@ -39,7 +39,8 @@
     "> Ans: [Name, Sex, Ticket, Cabin, Embarked]欄位\n",
     "\n",
     "# 作業3\n",
-    "* 續上題，請問哪個欄位是\"目標值\"?"
+    "* 續上題，請問哪個欄位是\"目標值\"?\n",
+    "> Ans: Survived"
    ]
   },
   {
