--- a/Day_025_HW.ipynb
+++ b/Day_025_HW.ipynb
@@ -317,12 +317,15 @@
    },
    "source": [
     "# 作業2\n",
-    "* 觀察鐵達尼生存預測中，均值編碼與標籤編碼兩者比較，哪一個效果比較好? 可能的原因是什麼?"
+    "* 觀察鐵達尼生存預測中，均值編碼與標籤編碼兩者比較，哪一個效果比較好? 可能的原因是什麼?\n",
+    ">Mean Encoding的結果較佳 <br>\n",
+    ">值得注意的是, 'Name'與'Ticket'兩個欄位的種類數較多, 容易Overfitting<br>\n",
+    ">故在實作中, 會先將這兩個欄位除"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -331,7 +334,7 @@
      "text": [
       "shape : (891, 5)\n",
       "score : 0.7800138095537004\n",
-      "time : 0.09126162528991699 sec\n"
+      "time : 0.09374761581420898 sec\n"
      ]
     }
    ],
@@ -354,12 +357,37 @@
    "metadata": {},
    "outputs": [
     {
+     "data": {
+      "text/plain": [
+       "Name        891\n",
+       "Sex           2\n",
+       "Ticket      681\n",
+       "Cabin       148\n",
+       "Embarked      4\n",
+       "dtype: int64"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "train_X.nunique()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [
+    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
       "shape : (891, 5)\n",
-      "score : 1.0\n",
-      "time : 0.03291177749633789 sec\n"
+      "score : 0.835019772770071\n",
+      "time : 0.0239107608795166 sec\n"
      ]
     }
    ],
@@ -371,7 +399,7 @@
     "    mean_df.columns = [c, f'{c}_mean']\n",
     "    data = pd.merge(data, mean_df, on=c, how='left')\n",
     "    data = data.drop([c] , axis=1)\n",
-    "data = data.drop(['Survived'] , axis=1)\n",
+    "data = data.drop(['Survived', 'Name_mean', 'Ticket_mean'] , axis=1)\n",
     "estimator = LogisticRegression()\n",
     "start = time.time()\n",
     "print(f'shape : {train_X.shape}')\n",
