--- a/Day_026_HW.ipynb
+++ b/Day_026_HW.ipynb
@@ -574,7 +574,7 @@
        "      <td>None</td>\n",
        "      <td>S</td>\n",
        "      <td>1014</td>\n",
-       "      <td>8</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -584,7 +584,7 @@
        "      <td>C85</td>\n",
        "      <td>C</td>\n",
        "      <td>2</td>\n",
-       "      <td>1</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -594,7 +594,7 @@
        "      <td>None</td>\n",
        "      <td>S</td>\n",
        "      <td>1014</td>\n",
-       "      <td>8</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -604,7 +604,7 @@
        "      <td>C123</td>\n",
        "      <td>S</td>\n",
        "      <td>2</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -614,7 +614,7 @@
        "      <td>None</td>\n",
        "      <td>S</td>\n",
        "      <td>1014</td>\n",
-       "      <td>8</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>...</th>\n",
@@ -634,7 +634,7 @@
        "      <td>None</td>\n",
        "      <td>S</td>\n",
        "      <td>1014</td>\n",
-       "      <td>8</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1305</th>\n",
@@ -644,7 +644,7 @@
        "      <td>C105</td>\n",
        "      <td>C</td>\n",
        "      <td>1</td>\n",
-       "      <td>0</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1306</th>\n",
@@ -654,7 +654,7 @@
        "      <td>None</td>\n",
        "      <td>S</td>\n",
        "      <td>1014</td>\n",
-       "      <td>8</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1307</th>\n",
@@ -664,7 +664,7 @@
        "      <td>None</td>\n",
        "      <td>S</td>\n",
        "      <td>1014</td>\n",
-       "      <td>8</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1308</th>\n",
@@ -674,7 +674,7 @@
        "      <td>None</td>\n",
        "      <td>C</td>\n",
        "      <td>1014</td>\n",
-       "      <td>8</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -696,17 +696,17 @@
        "1308                           Peter, Master. Michael J    male   \n",
        "\n",
        "                  Ticket Cabin Embarked  Cabin_Count  Cabin_Hash  \n",
-       "0              A/5 21171  None        S         1014           8  \n",
-       "1               PC 17599   C85        C            2           1  \n",
-       "2       STON/O2. 3101282  None        S         1014           8  \n",
-       "3                 113803  C123        S            2           0  \n",
-       "4                 373450  None        S         1014           8  \n",
+       "0              A/5 21171  None        S         1014           5  \n",
+       "1               PC 17599   C85        C            2           6  \n",
+       "2       STON/O2. 3101282  None        S         1014           5  \n",
+       "3                 113803  C123        S            2           2  \n",
+       "4                 373450  None        S         1014           5  \n",
        "...                  ...   ...      ...          ...         ...  \n",
-       "1304           A.5. 3236  None        S         1014           8  \n",
-       "1305            PC 17758  C105        C            1           0  \n",
-       "1306  SOTON/O.Q. 3101262  None        S         1014           8  \n",
-       "1307              359309  None        S         1014           8  \n",
-       "1308                2668  None        C         1014           8  \n",
+       "1304           A.5. 3236  None        S         1014           5  \n",
+       "1305            PC 17758  C105        C            1           6  \n",
+       "1306  SOTON/O.Q. 3101262  None        S         1014           5  \n",
+       "1307              359309  None        S         1014           5  \n",
+       "1308                2668  None        C         1014           5  \n",
        "\n",
        "[1309 rows x 7 columns]"
       ]
@@ -739,7 +739,7 @@
     "# 作業2\n",
     "* 承上題，三者比較效果何者最好?\n",
     "> 本次實作結果驗證分數排序如下:<br>  \n",
-    "> hash encoding(0.786) > count encoding(0.782) > label encoding(0.780) > hash+count (0.779)"
+    "> hash encoding (0.783) > count encoding(0.782) > label encoding(0.780) > hash+count(0.776) "
    ]
   },
   {
@@ -904,7 +904,6 @@
        "      <th>Name</th>\n",
        "      <th>Sex</th>\n",
        "      <th>Ticket</th>\n",
-       "      <th>Cabin</th>\n",
        "      <th>Embarked</th>\n",
        "      <th>Cabin_Count</th>\n",
        "    </tr>\n",
@@ -915,7 +914,6 @@
        "      <td>155</td>\n",
        "      <td>1</td>\n",
        "      <td>720</td>\n",
-       "      <td>185</td>\n",
        "      <td>3</td>\n",
        "      <td>1014</td>\n",
        "    </tr>\n",
@@ -924,7 +922,6 @@
        "      <td>286</td>\n",
        "      <td>0</td>\n",
        "      <td>816</td>\n",
-       "      <td>106</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
@@ -933,7 +930,6 @@
        "      <td>523</td>\n",
        "      <td>0</td>\n",
        "      <td>914</td>\n",
-       "      <td>185</td>\n",
        "      <td>3</td>\n",
        "      <td>1014</td>\n",
        "    </tr>\n",
@@ -942,7 +938,6 @@
        "      <td>422</td>\n",
        "      <td>0</td>\n",
        "      <td>65</td>\n",
-       "      <td>70</td>\n",
        "      <td>3</td>\n",
        "      <td>2</td>\n",
        "    </tr>\n",
@@ -951,7 +946,6 @@
        "      <td>22</td>\n",
        "      <td>1</td>\n",
        "      <td>649</td>\n",
-       "      <td>185</td>\n",
        "      <td>3</td>\n",
        "      <td>1014</td>\n",
        "    </tr>\n",
@@ -960,12 +954,12 @@
        "</div>"
       ],
       "text/plain": [
-       "   Name  Sex  Ticket  Cabin  Embarked  Cabin_Count\n",
-       "0   155    1     720    185         3         1014\n",
-       "1   286    0     816    106         0            2\n",
-       "2   523    0     914    185         3         1014\n",
-       "3   422    0      65     70         3            2\n",
-       "4    22    1     649    185         3         1014"
+       "   Name  Sex  Ticket  Embarked  Cabin_Count\n",
+       "0   155    1     720         3         1014\n",
+       "1   286    0     816         0            2\n",
+       "2   523    0     914         3         1014\n",
+       "3   422    0      65         3            2\n",
+       "4    22    1     649         3         1014"
       ]
      },
      "execution_count": 7,
@@ -980,6 +974,7 @@
     "    df_temp[c] = LabelEncoder().fit_transform(df2[c])\n",
     "df_temp['Cabin_Count'] = df['Cabin_Count']\n",
     "train_X = df_temp[:train_num]\n",
+    "df_temp = df_temp.drop(['Cabin'], axis=1)\n",
     "estimator = LogisticRegression()\n",
     "print(cross_val_score(estimator, train_X, train_Y, cv=5).mean())\n",
     "df_temp.head()"
@@ -994,7 +989,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7856443412215178\n"
+      "0.7833657648609629\n"
      ]
     },
     {
@@ -1059,7 +1054,6 @@
        "      <th>Name</th>\n",
        "      <th>Sex</th>\n",
        "      <th>Ticket</th>\n",
-       "      <th>Cabin</th>\n",
        "      <th>Embarked</th>\n",
        "      <th>Cabin_Hash</th>\n",
        "    </tr>\n",
@@ -1070,57 +1064,52 @@
        "      <td>155</td>\n",
        "      <td>1</td>\n",
        "      <td>720</td>\n",
-       "      <td>185</td>\n",
        "      <td>3</td>\n",
-       "      <td>8</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>286</td>\n",
        "      <td>0</td>\n",
        "      <td>816</td>\n",
-       "      <td>106</td>\n",
        "      <td>0</td>\n",
-       "      <td>1</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>523</td>\n",
        "      <td>0</td>\n",
        "      <td>914</td>\n",
-       "      <td>185</td>\n",
        "      <td>3</td>\n",
-       "      <td>8</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>422</td>\n",
        "      <td>0</td>\n",
        "      <td>65</td>\n",
-       "      <td>70</td>\n",
        "      <td>3</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>22</td>\n",
        "      <td>1</td>\n",
        "      <td>649</td>\n",
-       "      <td>185</td>\n",
        "      <td>3</td>\n",
-       "      <td>8</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Name  Sex  Ticket  Cabin  Embarked  Cabin_Hash\n",
-       "0   155    1     720    185         3           8\n",
-       "1   286    0     816    106         0           1\n",
-       "2   523    0     914    185         3           8\n",
-       "3   422    0      65     70         3           0\n",
-       "4    22    1     649    185         3           8"
+       "   Name  Sex  Ticket  Embarked  Cabin_Hash\n",
+       "0   155    1     720         3           5\n",
+       "1   286    0     816         0           6\n",
+       "2   523    0     914         3           5\n",
+       "3   422    0      65         3           2\n",
+       "4    22    1     649         3           5"
       ]
      },
      "execution_count": 8,
@@ -1134,6 +1123,7 @@
     "for c in df2.columns:\n",
     "    df_temp[c] = LabelEncoder().fit_transform(df2[c])\n",
     "df_temp['Cabin_Hash'] = df['Cabin_Hash']\n",
+    "df_temp = df_temp.drop(['Cabin'], axis=1)\n",
     "train_X = df_temp[:train_num]\n",
     "estimator = LogisticRegression()\n",
     "print(cross_val_score(estimator, train_X, train_Y, cv=5).mean())\n",
@@ -1164,6 +1154,22 @@
       "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
       "Please also refer to the documentation for alternative solver options:\n",
       "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  extra_warning_msg=_LOGISTIC_SOLVER_CONVERGENCE_MSG)\n",
+      "D:\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:940: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
+      "  extra_warning_msg=_LOGISTIC_SOLVER_CONVERGENCE_MSG)\n",
+      "D:\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:940: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
+      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
+      "\n",
+      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
+      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
+      "Please also refer to the documentation for alternative solver options:\n",
+      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
       "  extra_warning_msg=_LOGISTIC_SOLVER_CONVERGENCE_MSG)\n"
      ]
     },
@@ -1171,37 +1177,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0.7788651057686273\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "D:\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:940: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  extra_warning_msg=_LOGISTIC_SOLVER_CONVERGENCE_MSG)\n",
-      "D:\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:940: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  extra_warning_msg=_LOGISTIC_SOLVER_CONVERGENCE_MSG)\n",
-      "D:\\Anaconda3\\lib\\site-packages\\sklearn\\linear_model\\_logistic.py:940: ConvergenceWarning: lbfgs failed to converge (status=1):\n",
-      "STOP: TOTAL NO. of ITERATIONS REACHED LIMIT.\n",
-      "\n",
-      "Increase the number of iterations (max_iter) or scale the data as shown in:\n",
-      "    https://scikit-learn.org/stable/modules/preprocessing.html\n",
-      "Please also refer to the documentation for alternative solver options:\n",
-      "    https://scikit-learn.org/stable/modules/linear_model.html#logistic-regression\n",
-      "  extra_warning_msg=_LOGISTIC_SOLVER_CONVERGENCE_MSG)\n"
+      "0.7755194275312284\n"
      ]
     },
     {
@@ -1228,7 +1204,6 @@
        "      <th>Name</th>\n",
        "      <th>Sex</th>\n",
        "      <th>Ticket</th>\n",
-       "      <th>Cabin</th>\n",
        "      <th>Embarked</th>\n",
        "      <th>Cabin_Count</th>\n",
        "      <th>Cabin_Hash</th>\n",
@@ -1240,62 +1215,57 @@
        "      <td>155</td>\n",
        "      <td>1</td>\n",
        "      <td>720</td>\n",
-       "      <td>185</td>\n",
        "      <td>3</td>\n",
        "      <td>1014</td>\n",
-       "      <td>8</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
        "      <td>286</td>\n",
        "      <td>0</td>\n",
        "      <td>816</td>\n",
-       "      <td>106</td>\n",
        "      <td>0</td>\n",
        "      <td>2</td>\n",
-       "      <td>1</td>\n",
+       "      <td>6</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
        "      <td>523</td>\n",
        "      <td>0</td>\n",
        "      <td>914</td>\n",
-       "      <td>185</td>\n",
        "      <td>3</td>\n",
        "      <td>1014</td>\n",
-       "      <td>8</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
        "      <td>422</td>\n",
        "      <td>0</td>\n",
        "      <td>65</td>\n",
-       "      <td>70</td>\n",
        "      <td>3</td>\n",
        "      <td>2</td>\n",
-       "      <td>0</td>\n",
+       "      <td>2</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
        "      <td>22</td>\n",
        "      <td>1</td>\n",
        "      <td>649</td>\n",
-       "      <td>185</td>\n",
        "      <td>3</td>\n",
        "      <td>1014</td>\n",
-       "      <td>8</td>\n",
+       "      <td>5</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "   Name  Sex  Ticket  Cabin  Embarked  Cabin_Count  Cabin_Hash\n",
-       "0   155    1     720    185         3         1014           8\n",
-       "1   286    0     816    106         0            2           1\n",
-       "2   523    0     914    185         3         1014           8\n",
-       "3   422    0      65     70         3            2           0\n",
-       "4    22    1     649    185         3         1014           8"
+       "   Name  Sex  Ticket  Embarked  Cabin_Count  Cabin_Hash\n",
+       "0   155    1     720         3         1014           5\n",
+       "1   286    0     816         0            2           6\n",
+       "2   523    0     914         3         1014           5\n",
+       "3   422    0      65         3            2           2\n",
+       "4    22    1     649         3         1014           5"
       ]
      },
      "execution_count": 9,
@@ -1310,6 +1280,7 @@
     "    df_temp[c] = LabelEncoder().fit_transform(df2[c])\n",
     "df_temp['Cabin_Count'] = df['Cabin_Count']\n",
     "df_temp['Cabin_Hash'] = df['Cabin_Hash']\n",
+    "df_temp = df_temp.drop(['Cabin'], axis=1)\n",
     "train_X = df_temp[:train_num]\n",
     "estimator = LogisticRegression()\n",
     "print(cross_val_score(estimator, train_X, train_Y, cv=5).mean())\n",
