--- a/Day_028_HW.ipynb
+++ b/Day_028_HW.ipynb
@@ -320,7 +320,7 @@
      "output_type": "stream",
      "text": [
       "Linear Reg Score : 0.026876871475641616\n",
-      "Gradient Boosting Reg Score : 0.7112578542393889\n"
+      "Gradient Boosting Reg Score : 0.7104751458387253\n"
      ]
     }
    ],
@@ -464,7 +464,7 @@
      "output_type": "stream",
      "text": [
       "Linear Reg Score : 0.027479693774541868\n",
-      "Gradient Boosting Reg Score : 0.8065772099049024\n"
+      "Gradient Boosting Reg Score : 0.8049722399175419\n"
      ]
     }
    ],
@@ -482,20 +482,21 @@
    },
    "source": [
     "# 作業1\n",
-    "* 參考今日教材，試著使用經緯度一圈的長度比這一概念，組合出一個新特徵，再觀察原特徵加上新特徵是否提升了正確率?"
+    "* 參考今日教材，試著使用經緯度一圈的長度比這一概念，組合出一個新特徵，再觀察原特徵加上新特徵是否提升了正確率?\n",
+    "> 增加新特徵後, 兩種模型準確度皆下降"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Linear Reg Score : 0.025298099777422634\n",
-      "Gradient Boosting Reg Score : 0.8045805910089786\n"
+      "Linear Reg Score : 0.02523808408906658\n",
+      "Gradient Boosting Reg Score : 0.8023207792375494\n"
      ]
     }
    ],
@@ -504,7 +505,8 @@
     "\"\"\"\n",
     "Your Code Here, set new character at df['distance_real']\n",
     "\"\"\"\n",
-    "df['distance_real'] = ((df['longitude_diff']*math.cos(40.75*math.pi/180))**2 + df['latitude_diff']**2)**0.5\n",
+    "mean_lat = df['pickup_latitude'].mean()\n",
+    "df['distance_real'] = ((df['longitude_diff']*math.cos(mean_lat*math.pi/180))**2 + df['latitude_diff']**2)**0.5\n",
     "\n",
     "# 觀察結果 \n",
     "train_X = scaler.fit_transform(df)\n",
@@ -517,20 +519,21 @@
    "metadata": {},
    "source": [
     "# 作業2\n",
-    "* 試著只使用新特徵估計目標值(忽略原特徵)，效果跟作業1的結果比較起來效果如何?"
+    "* 試著只使用新特徵估計目標值(忽略原特徵)，效果跟作業1的結果比較起來效果如何?\n",
+    "> 只使用新特徵估計目標值, 兩種模型準確度皆下降"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Linear Reg Score : 0.0014467559986836014\n",
-      "Gradient Boosting Reg Score : 0.7221194640622727\n"
+      "Linear Reg Score : 0.0014462469864103156\n",
+      "Gradient Boosting Reg Score : 0.7236450666734193\n"
      ]
     }
    ],
@@ -539,6 +542,13 @@
     "print(f'Linear Reg Score : {cross_val_score(Linear, train_X, train_Y, cv=5).mean()}')\n",
     "print(f'Gradient Boosting Reg Score : {cross_val_score(GDBT, train_X, train_Y, cv=5).mean()}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
