--- a/Day_033_HW.ipynb
+++ b/Day_033_HW.ipynb
@@ -36,8 +36,8 @@
    "source": [
     "### 2. 分類問題與回歸問題分別可用的目標函數有哪些？\n",
     ">Ans:<br>\n",
-    ">  分類問題: LogisticRegression  <br>\n",
-    ">  回歸問題: LinearRegression "
+    ">  分類問題: Cross Entropy  <br>\n",
+    ">  回歸問題: Mean Square Error "
    ]
   },
   {
