--- a/Day_036_HW.ipynb
+++ b/Day_036_HW.ipynb
@@ -43,11 +43,11 @@
     {
      "data": {
       "text/plain": [
-       "array([0, 1, 1, 0, 0, 0, 1, 1, 1, 1, 0, 1, 1, 0, 0, 0, 0, 0, 1, 1, 1, 0,\n",
-       "       0, 0, 1, 1, 1, 0, 0, 1, 1, 1, 0, 0, 0, 1, 0, 1, 0, 1, 1, 0, 1, 1,\n",
-       "       0, 0, 1, 1, 1, 1, 0, 0, 0, 0, 1, 0, 1, 0, 1, 1, 0, 1, 0, 0, 1, 1,\n",
-       "       1, 0, 1, 0, 1, 1, 0, 0, 0, 0, 1, 1, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0,\n",
-       "       0, 0, 1, 1, 1, 0, 1, 0, 0, 0, 1, 0])"
+       "array([0, 1, 1, 1, 0, 1, 0, 1, 1, 1, 1, 1, 1, 1, 0, 1, 0, 1, 0, 1, 0, 0,\n",
+       "       0, 1, 0, 0, 0, 1, 0, 0, 1, 1, 1, 0, 0, 1, 0, 0, 0, 0, 1, 0, 1, 1,\n",
+       "       0, 0, 1, 0, 1, 0, 0, 0, 1, 0, 0, 1, 1, 0, 1, 0, 1, 1, 1, 0, 1, 0,\n",
+       "       0, 1, 1, 1, 0, 0, 0, 1, 1, 1, 0, 1, 0, 0, 0, 1, 1, 1, 0, 1, 0, 1,\n",
+       "       0, 0, 0, 1, 1, 0, 0, 0, 1, 1, 1, 1])"
       ]
      },
      "execution_count": 2,
@@ -77,8 +77,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Precision:  0.4782608695652174\n",
-      "Recall:  0.43137254901960786\n"
+      "Precision:  0.5686274509803921\n",
+      "Recall:  0.5686274509803921\n"
      ]
     }
    ],
@@ -99,23 +99,47 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "F2-Score:  1.25\n"
+      "F2-Score:  0.35539215686274506\n"
      ]
     }
    ],
    "source": [
     "# F2-score, beta=2\n",
     "beta = 2\n",
-    "f2 = ((1+beta**2)*(precision*recall))/((beta**2)*(precision*recall))\n",
+    "f2 = ((1+beta**2)*(precision*recall))/((beta**2)*(precision+recall))\n",
     "print(\"F2-Score: \", f2)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def f2_score(y_true, y_pred, beta=2):\n",
+    "    precision = metrics.precision_score(y_true, y_pred)\n",
+    "    recall  = metrics.recall_score(y_true, y_pred)\n",
+    "    f_score = ((1+beta**2)*(precision*recall))/((beta**2)*(precision+recall))\n",
+    "    return f_score\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "F2-Score:  0.35539215686274506\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(\"F2-Score: \", f2_score(y_true, y_pred))"
+   ]
   },
   {
    "cell_type": "code",
