--- a/Day_039_HW.ipynb
+++ b/Day_039_HW.ipynb
@@ -46,18 +46,15 @@
     "Q2. 當自變數 (X) 存在高度共線性時，Ridge Regression 可以處理這樣的問題嗎?\n",
     "\n",
     "> Ans:<br>\n",
-    ">   <br>\n",
+    ">   可以, 藉由L2 penalty調整權重，減少特徵共線性所造成的Over-fitting。<br>\n",
     ">   "
    ]
   },
   {
-   "cell_type": "markdown",
+   "cell_type": "code",
+   "execution_count": null,
    "metadata": {},
-   "source": []
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
+   "outputs": [],
    "source": []
   }
  ],
