--- a/Day_042_HW.ipynb
+++ b/Day_042_HW.ipynb
@@ -20,19 +20,99 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 作業一"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
     "from sklearn import datasets, metrics\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
+    "from sklearn.tree import DecisionTreeClassifier, DecisionTreeRegressor\n",
     "from sklearn.model_selection import train_test_split"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 2,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Acuuracy:  0.9736842105263158\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 讀取鳶尾花資料集\n",
+    "iris = datasets.load_iris()\n",
+    "\n",
+    "# 切分訓練集/測試集\n",
+    "x_train, x_test, y_train, y_test = train_test_split(iris.data, iris.target, test_size=0.25, random_state=4)\n",
+    "\n",
+    "# 建立模型\n",
+    "clf = DecisionTreeClassifier()\n",
+    "\n",
+    "# 訓練模型\n",
+    "clf.fit(x_train, y_train)\n",
+    "\n",
+    "# 預測測試集\n",
+    "y_pred = clf.predict(x_test)\n",
+    "\n",
+    "\n",
+    "acc = metrics.accuracy_score(y_test, y_pred)\n",
+    "print(\"Acuuracy: \", acc)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Acuuracy:  0.6842105263157895\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 變動 DecisionTreeClassifier()中 min_samples_split參數 (defualt=2)\n",
+    "\n",
+    "x_train, x_test, y_train, y_test = train_test_split(iris.data, iris.target, test_size=0.25, random_state=4)\n",
+    "clf = DecisionTreeClassifier(min_samples_split=100)\n",
+    "clf.fit(x_train, y_train)\n",
+    "y_pred = clf.predict(x_test)\n",
+    "\n",
+    "acc = metrics.accuracy_score(y_test, y_pred)\n",
+    "print(\"Acuuracy: \", acc)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "   "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## 作業二"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -77,7 +157,7 @@
        "  'proline']}"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -90,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -111,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -156,6 +236,12 @@
       "\n",
       "max_depth=13\n",
       "Acuuracy: 0.94444\n",
+      "\n",
+      "max_depth=14\n",
+      "Acuuracy: 0.94444\n",
+      "\n",
+      "max_depth=15\n",
+      "Acuuracy: 0.94444\n",
       "\n"
      ]
     }
@@ -164,7 +250,8 @@
     "# 切割資料集\n",
     "x_train, x_test, y_train, y_test = train_test_split(wine_data, target, test_size=0.1, random_state=2)\n",
     "\n",
-    "for i in range(1, 14):\n",
+    "#比較不同深度對於模型準確度的影響\n",
+    "for i in range(1, 16):\n",
     "\n",
     "    # 實體化決策樹模型\n",
     "    clf = DecisionTreeClassifier(max_depth=i)\n",
@@ -183,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -194,7 +281,7 @@
       "\n",
       "alcohol - 0.017\n",
       "malic_acid - 0.0\n",
-      "ash - 0.019\n",
+      "ash - 0.0\n",
       "alcalinity_of_ash - 0.0\n",
       "magnesium - 0.0\n",
       "total_phenols - 0.0\n",
@@ -202,7 +289,7 @@
       "nonflavanoid_phenols - 0.0\n",
       "proanthocyanins - 0.0\n",
       "color_intensity - 0.388\n",
-      "hue - 0.0\n",
+      "hue - 0.019\n",
       "od280/od315_of_diluted_wines - 0.036\n",
       "proline - 0.145\n"
      ]
@@ -213,6 +300,49 @@
     "for i, j in zip(wine.feature_names, clf.feature_importances_):\n",
     "    print(f'{i} - {round(j, 3)}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "max_depth=15\n",
+      "Acuuracy: 1.0\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 同樣的資料集以回歸型的決策樹進行訓練\n",
+    "x_train, x_test, y_train, y_test = train_test_split(wine_data, target, test_size=0.1, random_state=2)\n",
+    "\n",
+    "\n",
+    "max_depth=15   \n",
+    "# 實體化決策樹模型\n",
+    "clf = DecisionTreeRegressor(max_depth=max_depth)\n",
+    "\n",
+    "# 訓練模型\n",
+    "clf.fit(x_train, y_train)\n",
+    "\n",
+    "# 預測測試集\n",
+    "y_pred = clf.predict(x_test)\n",
+    "\n",
+    "# 評估預測正確率\n",
+    "acc = metrics.accuracy_score(y_test, y_pred)\n",
+    "print(f'max_depth={max_depth}')\n",
+    "print(f\"Acuuracy: {round(acc,5)}\", end='\\n\\n')\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "code",
