--- a/Day_093_HW_CNN_Brief.ipynb
+++ b/Day_093_HW_CNN_Brief.ipynb
@@ -60,7 +60,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "v5aIt7RMHAzi",
-        "outputId": "9a5902bc-1812-4069-f7ff-df2cacb22abd"
+        "outputId": "70eff3db-7951-4d98-8b6b-e5a3970a396d"
       },
       "source": [
         "#導入相關模組\n",
@@ -102,13 +102,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Euqsm8WqLtGA",
-        "outputId": "e8d0a0eb-14d8-4fc7-9b9e-319499de0ad1"
+        "outputId": "0a9b305c-60c6-4fb8-ba8d-e8e2960bb38b"
       },
       "source": [
         "model.add(Conv2D(filters=32, kernel_size=(3,3), input_shape=(28, 28, 1)))\r\n",
         "model.add(MaxPooling2D(2,2))\r\n",
         "\r\n",
-        "model.add(layers.Conv2D(32, (3, 3)))\r\n",
+        "model.add(layers.Conv2D(25, (3, 3)))\r\n",
         "model.add(MaxPooling2D(2,2))\r\n",
         "\r\n",
         "model.add(Flatten())\r\n",
@@ -134,13 +134,13 @@
             "_________________________________________________________________\n",
             "max_pooling2d (MaxPooling2D) (None, 13, 13, 32)        0         \n",
             "_________________________________________________________________\n",
-            "conv2d_1 (Conv2D)            (None, 11, 11, 32)        9248      \n",
+            "conv2d_1 (Conv2D)            (None, 11, 11, 25)        7225      \n",
             "_________________________________________________________________\n",
-            "max_pooling2d_1 (MaxPooling2 (None, 5, 5, 32)          0         \n",
+            "max_pooling2d_1 (MaxPooling2 (None, 5, 5, 25)          0         \n",
             "_________________________________________________________________\n",
-            "flatten (Flatten)            (None, 800)               0         \n",
+            "flatten (Flatten)            (None, 625)               0         \n",
             "_________________________________________________________________\n",
-            "dense (Dense)                (None, 100)               80100     \n",
+            "dense (Dense)                (None, 100)               62600     \n",
             "_________________________________________________________________\n",
             "activation (Activation)      (None, 100)               0         \n",
             "_________________________________________________________________\n",
@@ -148,8 +148,8 @@
             "_________________________________________________________________\n",
             "activation_1 (Activation)    (None, 10)                0         \n",
             "=================================================================\n",
-            "Total params: 90,678\n",
-            "Trainable params: 90,678\n",
+            "Total params: 71,155\n",
+            "Trainable params: 71,155\n",
             "Non-trainable params: 0\n",
             "_________________________________________________________________\n"
           ],
@@ -173,64 +173,14 @@
       "cell_type": "code",
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 53
-        },
-        "id": "ISEtb2lXHAzk",
-        "outputId": "d2ba749c-efd5-4003-f190-fb4761bf3083"
-      },
-      "source": [
-        "'''\n",
-        "#建立一個序列模型\n",
-        "model = models.Sequential()\n",
-        "#建立兩個卷績層, 32 個內核, 內核大小 3x3, \n",
-        "#輸入影像大小 28x28x1\n",
-        "\n",
-        "#建立一個全連接層\n",
-        "model.add(Dense(units=100))\n",
-        "model.add(Activation('relu'))\n",
-        "\n",
-        "#建立一個輸出層, 並採用softmax\n",
-        "model.add(Dense(units=10))\n",
-        "model.add(Activation('softmax'))\n",
-        "'''"
-      ],
-      "execution_count": 4,
-      "outputs": [
-        {
-          "output_type": "execute_result",
-          "data": {
-            "application/vnd.google.colaboratory.intrinsic+json": {
-              "type": "string"
-            },
-            "text/plain": [
-              "\"\\n#建立一個序列模型\\nmodel = models.Sequential()\\n#建立兩個卷績層, 32 個內核, 內核大小 3x3, \\n#輸入影像大小 28x28x1\\n\\n#建立一個全連接層\\nmodel.add(Dense(units=100))\\nmodel.add(Activation('relu'))\\n\\n#建立一個輸出層, 並採用softmax\\nmodel.add(Dense(units=10))\\nmodel.add(Activation('softmax'))\\n\""
-            ]
-          },
-          "metadata": {
-            "tags": []
-          },
-          "execution_count": 4
-        }
-      ]
-    },
-    {
-      "cell_type": "code",
-      "metadata": {
-        "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "sYHXfxWDNIyu",
-        "outputId": "e21fa1bd-8bc4-4cf5-a549-12c300e24036"
+        "outputId": "f0feafd0-3072-43e9-c0df-a48aad76bf49"
       },
       "source": [
         "model = models.Sequential()\r\n",
-        "\r\n",
-        "model.add(Conv2D(filters=32, kernel_size=(3,3), input_shape=(28, 28, 1)))\r\n",
-        "model.add(layers.Conv2D(25, (3, 3)))\r\n",
-        "\r\n",
-        "model.add(Flatten())\r\n",
-        "\r\n",
+        "model.add(Dense(units=32, input_shape=(784,)))\r\n",
         "model.add(Dense(units=100))\r\n",
         "model.add(Activation('relu'))\r\n",
         "\r\n",
@@ -239,7 +189,7 @@
         "\r\n",
         "model.summary()"
       ],
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -248,22 +198,18 @@
             "_________________________________________________________________\n",
             "Layer (type)                 Output Shape              Param #   \n",
             "=================================================================\n",
-            "conv2d_2 (Conv2D)            (None, 26, 26, 32)        320       \n",
+            "dense_2 (Dense)              (None, 32)                25120     \n",
             "_________________________________________________________________\n",
-            "conv2d_3 (Conv2D)            (None, 24, 24, 25)        7225      \n",
-            "_________________________________________________________________\n",
-            "flatten_1 (Flatten)          (None, 14400)             0         \n",
-            "_________________________________________________________________\n",
-            "dense_2 (Dense)              (None, 100)               1440100   \n",
+            "dense_3 (Dense)              (None, 100)               3300      \n",
             "_________________________________________________________________\n",
             "activation_2 (Activation)    (None, 100)               0         \n",
             "_________________________________________________________________\n",
-            "dense_3 (Dense)              (None, 10)                1010      \n",
+            "dense_4 (Dense)              (None, 10)                1010      \n",
             "_________________________________________________________________\n",
             "activation_3 (Activation)    (None, 10)                0         \n",
             "=================================================================\n",
-            "Total params: 1,448,655\n",
-            "Trainable params: 1,448,655\n",
+            "Total params: 29,430\n",
+            "Trainable params: 29,430\n",
             "Non-trainable params: 0\n",
             "_________________________________________________________________\n"
           ],
